--- a/redirect.html
+++ b/redirect.html
@@ -51,9 +51,9 @@
 <body>
 
     <div class="container">
-        <h1>Selecione seu grupo para redirecionamento</h1>
-        <button class="button button-brazilian" onclick="window.location.href='https://forms.gle/KhNkknMTu1pbk2t37'">Brasileiros</button>
-        <button class="button button-foreign" onclick="window.location.href='https://forms.gle/oCvsVu1ekzBbhWqN8'">Estrangeiros</button>
+        <h1>Bem vindo ao redirecionamento de formularios de visitação do DSC Belem./Welcome to the visitation forms redirect of DSC Belem.</h1>
+        <button class="button button-brazilian" onclick="window.location.href='https://forms.gle/KhNkknMTu1pbk2t37'">Brasileiros - Por favor preencham esse formulario.</button>
+        <button class="button button-foreign" onclick="window.location.href='https://forms.gle/oCvsVu1ekzBbhWqN8'">Foreigners - Please fill out this form.</button>
     </div>
 
 </body>
