--- a/redirect.html
+++ b/redirect.html
@@ -51,8 +51,12 @@
 <body>
 
     <div class="container">
-        <h1>Bem vindo ao redirecionamento de formularios de visitação do DSC Belem./Welcome to the visitation forms redirect of DSC Belem.</h1>
+        <h1>Bem vindo ao redirecionamento de formularios de visitação do DSC Belem. Se você é Brasileiro e quer visitar qualquer uma das intituições judaicas de Belem,  por favor preencha o formulario abaixo</h1>
         <button class="button button-brazilian" onclick="window.location.href='https://forms.gle/KhNkknMTu1pbk2t37'">Brasileiros - Por favor preencham esse formulario.</button>
+    </div>
+
+        <div class="container">
+        <h1>Welcome to the visitation forms redirect of DSC Belem. If you are a foreigner who wants to visit any of the jewish institutions of Belem, please fill out the form below.</h1>
         <button class="button button-foreign" onclick="window.location.href='https://forms.gle/oCvsVu1ekzBbhWqN8'">Foreigners - Please fill out this form.</button>
     </div>
 
