--- a/redirect.html
+++ b/redirect.html
@@ -80,12 +80,12 @@
 
     <div class="container">
         <h1>Bem-vindo ao redirecionamento de formulários de visitação do DSC Belém. Se você é brasileiro e quer visitar qualquer uma das instituições judaicas de Belém, por favor, preencha o formulário abaixo.</h1>
-        <button class="button button-brazilian" onclick="window.location.href='https://forms.gle/KhNkknMTu1pbk2t37'">Brasileiros - Preencha este formulário</button>
+        <button class="button button-brazilian" onclick="window.location.href='https://forms.gle/KhNkknMTu1pbk2t37', '_blank', 'noopener,noreferrer')">Brasileiros - Preencha este formulário</button>
     </div>
 
     <div class="container">
         <h1>Welcome to the visitation forms redirect of DSC Belem. If you are a foreigner who wants to visit any of the Jewish institutions of Belem, please fill out the form below.</h1>
-        <button class="button button-foreign" onclick="window.location.href='https://forms.gle/oCvsVu1ekzBbhWqN8'">Foreigners - Please fill out this form</button>
+        <button class="button button-foreign" onclick="window.location.href='https://forms.gle/oCvsVu1ekzBbhWqN8', '_blank', 'noopener,noreferrer')">Foreigners - Please fill out this form</button>
     </div>
 
 </body>
