--- a/redirect.html
+++ b/redirect.html
@@ -84,7 +84,7 @@
     </div>
 
     <div class="container">
-        <h1>Welcome to the visitation forms redirect of DSC Belem.</br></br> If you are a foreigner who wants to visit any of the Jewish institutions of Belem, please fill out the form below.</h1>
+        <h1>Welcome to the visitation forms redirect of DSC Belem.</br></br> If you are a foreigner who wants to visit any of the Jewish institutions of Belém, please fill out the form below.</h1>
         <button class="button button-foreign" onclick="window.location.href='https://forms.gle/oCvsVu1ekzBbhWqN8', '_blank', 'noopener,noreferrer')">Foreigners - Please fill out this form</button>
     </div>
 
