Update gramar on the button.html

--- a/redirect.html
+++ b/redirect.html
@@ -83,7 +83,7 @@
         Se você é brasileiro e quer visitar qualquer uma das instituições judaicas de Belém, por favor, preencha o formulário abaixo.
     </h1>
     <button class="button button-brazilian" onclick="window.open('https://forms.gle/KhNkknMTu1pbk2t37', '_blank', 'noopener,noreferrer')">
-        Brasileiros - Preencha este formulário
+        Formulario para Brasileiros
     </button>
 </div>
 
@@ -92,7 +92,7 @@
         If you are a foreigner who wants to visit any of the Jewish institutions of Belém, please fill out the form below.
     </h1>
     <button class="button button-foreign" onclick="window.open('https://forms.gle/oCvsVu1ekzBbhWqN8', '_blank', 'noopener,noreferrer')">
-        Foreigners - Please fill out this form
+        Foreigner's form
     </button>
 </div>
 
